[metadata]
name = sandboxlib
version = 0.0.1
description = A small example package
long_description = file: README.md
license = MIT
author = Shigeru Kitazaki
author_email = skitazaki@gmail.com
url = https://github.com/skitazaki/sandbox/
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    click >= 7.1.1
    PyYAML >= 5.3.1

[options.extras_require]
dev =
    black >= 19.10b0
    flake8 >= 3.7.9
test =
    pytest >= 5.4.1

[flake8]
exclude = build,.git,.tox,./tests/.env
# ignore = W504,W601
max-line-length = 119
